[package]
name = "genomics"
version = "0.1.0"
authors = ["Dave Fol <dof5@cornell.edu>"]
edition = "2018"
license = "GNU GPLv3"
repository = "https://github.com/davefol/rust-genomics"
readme = "README.md"
description = "A genomics library for rust focusing on individual genetics, population genetics, and SNPs"
documentation = ""
homepage = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
